--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ python-dotenv
 
 #the sendgrid package enables users to
 sendgrid==6.6.0
+
+#The gspread package provides an interface to Google Sheet documents via the Google Sheets and Google Drive APIs.
+gspread oauth2client
